2006-12-01  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version, Date): 0.9975-10
	
	* R/lmer.R (lmerFrames): Use model.response(mf, "any") (suggested
	by Brian Ripley).
	* R/lmer.R (lmerControl), man/lmer.Rd: Change default of usePQL
	control option to FALSE.
	* R/lmer.R (lmer): print revised relative tolerance only if
	msVerbose is TRUE.
	* R/lmer.R (lmerFactorList): allow nlev == nobs for binomial GLMMs
	(problem report from Sandy Weisberg).

2006-11-14  Douglas Bates  <bates@stat.wisc.edu>

	* R/carryOver.R (fn): Allow factors on the LHS of carry.

	* src/lmer.c: Reset the status appropriately.
	* src/lme4_utils: Reformat source code.

2006-11-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.9975-9

	* R/lmer.R (simulate): better test for "glmer"

	* man/lmer-class.Rd: add simulate() example

2006-10-19  Douglas Bates  <bates@stat.wisc.edu>

	* data/cbpp.rda, man/cbpp.Rd: Added Contagious Bovine
	Pleuropneumonia data contributed by Renaud Lancelot.

	* src: Martin fixed more C99 usages.

	* R/lmer.R (lmerFactorList): Throw an error if there are no random
	effects terms in the model formula. (Also added a test of this in
	tests/lmer.R)

2006-10-18  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmer.R (mkFltype): typo

	* DESCRIPTION (Version): Version 0.9975-7

	* R/lmer.R (lmer): Remove wtssqr.  Use weights correctly in the
	calls to dev.resids (problem reported by Renaud Lancelot).
	(mlirt): Change na.ignore to na.pass.

2006-10-16  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): New version

	* R/lmer.R (resid): Methods for resid and residuals generics
	should distinguish between glmer and lmer classes.

2006-10-15  Douglas Bates  <bates@stat.wisc.edu>

	* src/lmer.c (internal_mer_update_ZXy): double transpose to sort
	columns in ZtZ.

2006-10-13  Douglas Bates  <bates@stat.wisc.edu>

	* src/glmer.c (glmer_linkinv): Repair code for probit link here
	and in a couple of other places.
