@@ -1,3 +1,7 @@
+2006-12-13  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/lmer.[ch],init.c (mer2_setPars): Added mer2 extractors.
+
 2006-12-01  Douglas Bates  <bates@stat.wisc.edu>
 
 	* DESCRIPTION (Version, Date): 0.9975-10
